# Street-Normalizer

./: README.md  pyproject.toml  run_tests.sh
src/street_normalizer/: __init__.py  references.py  street_normalizer.py
test/: test_base.py
